--- a/src/app/Table/Table.css
+++ b/src/app/Table/Table.css
@@ -1,9 +1,15 @@
 .cellsData{
     display: grid;
-    grid-template-columns: 150px  repeat(32, 50px);
+    grid-template-columns: 150px  repeat(32, 100px);
     grid-auto-rows: 50px;
 }
-.cellData {
-    display: flex;
-    flex-direction: row;
+.cellData_user{
+    position: sticky;
+    left: 0;
+    background-color: white;
+}
+.cellData_monthly{
+    position: sticky;
+    right: 0;
+    background-color: white;
 }
