--- a/src/app/TableHeader/TableHeader.css
+++ b/src/app/TableHeader/TableHeader.css
@@ -1,6 +1,6 @@
 .cells{
     display: grid;
-    grid-template-columns: 150px  repeat(31, 50px) 150px;
+    grid-template-columns: 150px  repeat(32, 100px);
     grid-auto-rows: 30px;
     padding-top: 10px;
     position: sticky;
@@ -11,4 +11,14 @@
     display: flex;
     flex-direction: row;
     padding: 0 5px;
+}
+.column_user{
+    background-color: white;
+    position: sticky;
+    left: 0;
+}
+.column_monthly{
+    background-color: white;
+    position: sticky;
+    right: 0;
 }
